# EFModLoader

./: CMakeLists.txt  README-en.md  README-ru.md  README.md
Android/: settings.gradle.kts
Android/app/: build.gradle.kts
Android/app/src/androidTest/java/eternal/future/efmodloader/: ExampleInstrumentedTest.java
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Android/app/src/main/cpp/EFModLoader/include/EFModLoader/: Android.hpp  getData.hpp  log.hpp
Android/app/src/main/cpp/EFModLoader/include/EFModLoader/api/: Redirect.hpp
Android/app/src/main/cpp/EFModLoader/src/: Android.cpp  log.cpp
Android/app/src/main/cpp/EFModLoader/src/api/: Register.cpp
Android/app/src/main/cpp/EFModLoader/src/hook/unity/: RegisterHook.cpp
Android/app/src/main/cpp/EFModLoader/src/loader/: LoadELFMods.cpp
Android/app/src/main/java/eternal/future/efmodloader/: Loader.java  MainActivity.java
Android/app/src/main/java/eternal/future/efmodloader/ui/: MainActivity.java
Android/app/src/main/res/values/: strings.xml  themes.xml
Android/app/src/main/res/values-night/: themes.xml
Android/app/src/test/java/eternal/future/efmodloader/: ExampleUnitTest.java
Android/gradle/: libs.versions.toml
Android/gradle/wrapper/: gradle-wrapper.properties
Android/load/: build.gradle.kts
Android/load/src/main/java/eternal/future/efmodloader/load/: Loader.java
include/EFModLoader/: Log.hpp
include/EFModLoader/EFMod/: CoreAPI.hpp  EFAPI.hpp  EFMod.hpp
include/EFModLoader/api/: Field.hpp  Func.hpp
include/EFModLoader/hook/: hooks.hpp
include/EFModLoader/loader/: load.hpp
include/EFModLoader/memory/: tool.hpp
src/: Log.cpp
src/api/: Field.cpp  Func.cpp
src/hook/: hooks.cpp
src/loader/: load.cpp
src/memory/: tool.cpp
test/: test.cpp
test/mod/: mod.cpp
